# frontier-delta

./: .gitignore  README.md  pyproject.toml
configs/: base.yaml
configs/arms/: distillation.yaml  exploration_preserving.yaml  format_only.yaml  library_frozen.yaml  library_random.yaml  library_shuffled.yaml  main_selfplay.yaml  no_frontier_replay.yaml  prolonged_rl.yaml  random_reward.yaml  star_self.yaml  vanilla_rlvr.yaml
docs/: 01-idea-development.md  02-recursive-learning-map.md  03-current-design.md  04-implementation-plan.md  05-references.md  README.md
prereg/: holdout_manifest.example.json  protocol.md
scripts/: 00_proposer_viability.py
src/frontier_delta/: __init__.py  analysis.py  curriculum.py  ledger.py  notebook.py  passk.py  rewards.py  sandbox.py  tasks.py  trainer.py  verifier.py
tests/: test_ledger.py  test_passk.py  test_rewards.py  test_trainer.py  test_verifier.py
